--- a/package.json
+++ b/package.json
@@ -8,7 +8,6 @@
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e"
-    
   },
   "private": true,
   "dependencies": {
@@ -24,6 +23,7 @@
     "@angular/router": "~10.2.4",
     "bootstrap-grid-only-css": "^4.1.3",
     "rxjs": "~6.6.0",
+    "sweetalert2": "^11.7.12",
     "tslib": "^2.0.0",
     "zone.js": "~0.10.2"
   },
